# FlowRAG

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: dedup_sop.py  extract_qa_from_batches.py  renumber_sop.py
scripts/_parallel_tmp/: run_ctx7000_anc1_iter1.bat  run_ctx7000_anc1_iter2.bat  run_ctx7000_anc1_iter4.bat  run_ctx7000_anc1_iter6.bat  run_ctx7000_anc2_iter1.bat  run_ctx7000_anc2_iter2.bat  run_ctx7000_anc2_iter4.bat  run_ctx7000_anc2_iter6.bat  run_ctx7000_anc3_iter1.bat  run_ctx7000_anc3_iter2.bat  run_ctx7000_anc3_iter4.bat  run_ctx7000_anc3_iter6.bat  run_ctx7000_anc4_iter1.bat  run_ctx7000_anc4_iter2.bat  run_ctx7000_anc4_iter4.bat  run_ctx7000_anc4_iter6.bat  run_ctx7000_anc5_iter1.bat  run_ctx7000_anc5_iter2.bat  run_ctx7000_anc5_iter4.bat  run_ctx7000_anc5_iter6.bat
src/: __init__.py  config.py
src/embedding/: __init__.py  context_embedder.py  embedder.py
src/generate/: generate_qa.py
src/graph/: __init__.py  graph_store.py  mermaid_parser.py
src/knowledge/: __init__.py  keyword_extractor_local.py  keyword_index.py  knowledge_mounter.py
src/models/: __init__.py  schemas.py
src/pipeline/: __init__.py  build_cache.py  build_pipeline.py  retrieval_pipeline.py
src/retrieval/: __init__.py  retrieval_cache.py
src/retriever/: __init__.py  graph_retriever.py  vector_retriever.py
src/utils/: __init__.py  openai_client.py  text_splitter.py  token_counter.py
src/vector_store/: __init__.py  vector_db.py
